update: add tools & break up the component
add createuuid
break up Editor component

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
   "fileheader.customMade": {
-    "Autor": "YeWei Wang",
+    "Author": "YeWei Wang",
     "Date": "Do not edit",
     "WeChat": "Studio06k4",
     "Motto": "求知若渴，虚心若愚",
