--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/node": "^17.0.21",
     "element-plus": "^1.3.0-beta.1",
+    "path": "^0.12.7",
     "sass": "^1.45.2",
     "vue": "^3.2.25"
   },
